bug fix (#41)
* fix #184285209 and #184286601

* fix #184285215 and #184285150

* fix extra padding in review section for Admit case

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -42,6 +42,7 @@
   font-display: swap;
   src: url(/assets/font/Roboto-Light.ttf);
 }
+
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -49,6 +50,7 @@
   font-display: swap;
   src: url(/assets/font/Roboto-Regular.ttf);
 }
+
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -56,6 +58,7 @@
   font-display: swap;
   src: url(/assets/font/Roboto-Medium.ttf);
 }
+
 @font-face {
   font-family: 'Roboto';
   font-style: normal;
@@ -160,7 +163,8 @@ body {
 
     span + span {
       margin-left: 16px;
-    };
+    }
+  ;
   }
 
   a {
@@ -220,6 +224,7 @@ body {
   h1 {
     font-size: 52px;
     margin-bottom: 60px;
+    padding: 0 20px;
 
     @include small-desktop-screen {
       font-size: 48px;
@@ -308,8 +313,15 @@ body {
     }
 
     .quote + .quote {
-      @include mobile-screen {
+      @include tablet-screen {
         margin-top: 20px;
+      }
+    }
+
+    & > .quote {
+      @include tablet-screen {
+        margin-left: 0;
+        margin-right: 0;
       }
     }
   }
@@ -325,9 +337,6 @@ body {
 
     @include small-tablet-screen {
       font-size: 20px;
-    }
-
-    @include mobile-screen {
       margin-left: 20px;
       margin-right: 20px;
     }
@@ -358,11 +367,17 @@ body {
     &.padding-top {
       padding-top: 28px;
     }
+
+    .subtitle {
+      @include tablet-screen {
+        padding-bottom: 16px;
+      }
+    }
   }
 
   .column-content + .column-content {
     @include tablet-screen {
-      padding-top: 10px;
+      padding-top: 40px;
     }
   }
 
@@ -377,15 +392,19 @@ body {
       max-width: 600px;
     }
 
-    @include small-tablet-screen {
-      padding: 0 20px;
-    }
-
     &.huge {
       max-width: 660px;
 
       @include small-desktop-screen {
         max-width: 540px;
+      }
+
+      @include tablet-screen {
+        padding: 0 20px;
+      }
+
+      @include small-tablet-screen {
+        padding: 0;
       }
     }
 
@@ -398,6 +417,11 @@ body {
 
       @include tablet-screen {
         margin-top: 100px;
+        padding: 0 20px;
+      }
+
+      @include small-tablet-screen {
+        padding: 0;
       }
 
       @include mobile-screen {
@@ -439,6 +463,10 @@ body {
       @include tablet-screen {
         margin: 0 auto;
       }
+
+      @include small-tablet-screen {
+        margin: 0 20px;
+      }
     }
 
     &.margin-top {
@@ -476,6 +504,10 @@ body {
 
     @include tablet-screen {
       justify-content: center;
+    }
+
+    @include mobile-screen {
+      padding: 0 20px;
     }
 
     img {
